2023-09-15T08:08:22Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6195547946 # 3805
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-09-15
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2803 / 0 2804 / +0 +1

2023-09-14T20:06:28Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6190338891 # 3802
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-09-14
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2793 / 0 2803 / +0 +10

2023-09-09T00:36:21Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6127763196 # 3797
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-09-09
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2792 / 0 2793 / +0 +1

2023-09-08T12:14:59Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6121571181 # 3794
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-09-08
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2791 / 0 2792 / +0 +1

2023-09-08T08:10:26Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6119319777 # 3793
* notice: Stats Output Repository: https://github.com/andry81-stats/tacklebar--totalcmd-stats/commits?branch=master&time_zone=utc&until=2023-09-08
* notice: query file size: 26207
* notice: accum prev / next / diff: re vi: 0 2790 / 0 2791 / +0 +1

2023-09-07T04:10:14Z:
* notice: GitHub Actions Run: https://github.com/andry81/andry81/actions/runs/6105295469 # 3786